--- a/MaterialList/MaterialList/MaterialList.csproj
+++ b/MaterialList/MaterialList/MaterialList.csproj
@@ -6,10 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
-  </ItemGroup>
 
 </Project>
